<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical"
        tools:context=".presentation.BinDetailInfoFragment">

        <TextView
            style="@style/DetailInfoTitleStyle"
            android:text="@string/bin_iin" />

        <TextView
            android:id="@+id/textViewBin"
            style="@style/DetailInfoTextStyle"
            tools:text="1234 5678" />

        <TextView
            style="@style/DetailInfoTitleStyle"
            android:text="@string/scheme_network" />

        <TextView
            android:id="@+id/textViewScheme"
            style="@style/DetailInfoTextStyle"
            tools:text="Visa" />

        <TextView
            style="@style/DetailInfoTitleStyle"
            android:text="@string/brand" />

        <TextView
            android:id="@+id/textViewBrand"
            style="@style/DetailInfoTextStyle"
            tools:text="Visa/Dankort" />

        <TextView
            android:id="@+id/textViewCardNumber"
            style="@style/DetailInfoTitleStyle"
            android:text="@string/card_number" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/DetailInfoTitleStyle"
                    android:text="@string/length" />

                <TextView
                    android:id="@+id/textViewCardNumberLength"
                    style="@style/DetailInfoTextStyle"
                    tools:text="16" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/DetailInfoTitleStyle"
                    android:text="@string/luhn" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textViewCardNumberLuhnYes"
                        style="@style/DetailInfoTextStyle"
                        android:text="@string/yes" />

                    <TextView
                        style="@style/DetailInfoTextStyle"
                        android:text="@string/slash" />

                    <TextView
                        android:id="@+id/textViewCardNumberLuhnNo"
                        style="@style/DetailInfoTextStyle"
                        android:text="@string/no" />

                </LinearLayout>

            </LinearLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <TextView
            style="@style/DetailInfoTitleStyle"
            android:text="@string/type" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                style="@style/DetailInfoTextStyle"
                android:text="@string/debit" />

            <TextView
                style="@style/DetailInfoTextStyle"
                android:text="@string/slash" />

            <TextView
                android:id="@+id/textViewTypeCredit"
                style="@style/DetailInfoTextStyle"
                android:text="@string/credit" />

        </LinearLayout>

        <TextView
            style="@style/DetailInfoTitleStyle"
            android:text="@string/prepaid" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textViewPrepaidYes"
                style="@style/DetailInfoTextStyle"
                android:text="@string/yes" />

            <TextView
                style="@style/DetailInfoTextStyle"
                android:text="@string/slash" />

            <TextView
                android:id="@+id/textViewPrepaidNo"
                style="@style/DetailInfoTextStyle"
                android:text="@string/no" />

        </LinearLayout>

        <TextView
            style="@style/DetailInfoTitleStyle"
            android:text="@string/country" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textViewCountry"
                    style="@style/DetailInfoTextStyle"
                    tools:text="🇩🇰" />

                <TextView
                    android:id="@+id/textViewCountryName"
                    style="@style/DetailInfoTextStyle"
                    tools:text="Denmark" />

            </LinearLayout>

            <TextView
                android:id="@+id/textViewCountryCoordinates"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/coordinates" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <TextView
            style="@style/DetailInfoTitleStyle"
            android:text="@string/bank" />

        <TextView
            android:id="@+id/textViewBankName"
            style="@style/DetailInfoTextStyle"
            tools:text="Jyske Bank, Hjørring" />

        <TextView
            android:id="@+id/textViewBankSite"
            style="@style/DetailInfoTextStyle"
            tools:text="www.jyskebank.dk" />

        <TextView
            android:id="@+id/textViewBankPhone"
            style="@style/DetailInfoTextStyle"
            tools:text="+4589893300" />

    </LinearLayout>

</ScrollView>
